--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -105,7 +105,8 @@
                     android:id="@+id/signup_text_email"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="4" />
+                    android:layout_weight="4"
+                    android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
