--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="180dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="100dp"
         app:srcCompat="@drawable/logo" />
 
