--- a/app/src/main/res/layout/activity_news_feed.xml
+++ b/app/src/main/res/layout/activity_news_feed.xml
@@ -16,37 +16,36 @@
         android:background="#B2BEB5"
         android:layout_margin="10dp">
 
-        <ImageView
-            android:layout_height="60dp"
-            android:layout_weight="1"
+        <Button
             android:id="@+id/feed_button_feed"
-            android:src="@drawable/icon_feed"
-            android:background="@color/green"
-            android:layout_width="0dp" />
-
-        <ImageView
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
-            android:src="@drawable/icon_profile"/>
+            android:background="@drawable/icon_feed_green" />
 
-        <ImageView
+        <Button
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
-            android:src="@drawable/icon_notification"/>
+            android:background="@drawable/icon_profile"/>
 
-        <ImageView
+        <Button
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
-            android:src="@drawable/icon_hobb"/>
+            android:background="@drawable/icon_notification"/>
 
-        <ImageView
+        <Button
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
-            android:src="@drawable/icon_setting"/>
+            android:background="@drawable/icon_hobb"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_weight="1"
+            android:background="@drawable/icon_setting"/>
 
     </LinearLayout>
 
@@ -73,44 +72,50 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/green"
                 android:layout_margin="15dp"
+                android:background="@color/green"
                 android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_margin="10dp">
+                    android:layout_margin="10dp"
+                    android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Blood Group : "
-                        android:textSize="17sp"
-                        android:textColor="#FFFFFF"/>
+                        android:textColor="#FFFFFF"
+                        android:textSize="17sp" />
+
                     <TextView
+                        android:id="@+id/feed_text_blood"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/feed_text_blood"
-                        android:textSize="17sp"
-                        android:textColor="#FFFFFF"/>
+                        android:textColor="#FFFFFF"
+                        android:textSize="17sp" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_margin="10dp">
+                    android:layout_margin="10dp"
+                    android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Location       : "
-                        android:textSize="17sp"
-                        android:textColor="#FFFFFF"/>
+                        android:textColor="#FFFFFF"
+                        android:textSize="17sp" />
+
                     <TextView
+                        android:id="@+id/feed_text_blood_2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/feed_text_blood_2"
-                        android:textSize="17sp"
-                        android:textColor="#FFFFFF"/>
+                        android:textColor="#FFFFFF"
+                        android:textSize="17sp" />
                 </LinearLayout>
 
             </LinearLayout>
