Basic UI and connectivity fully done

--- a/app/src/main/res/layout/activity_news_feed.xml
+++ b/app/src/main/res/layout/activity_news_feed.xml
@@ -50,6 +50,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/feed_button_request"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
