--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -355,6 +355,7 @@
             android:layout_margin="10dp">
 
             <Button
+                android:id="@+id/profile_button_seeposts"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
